src/objects/MICO_SCM_Commit__c.object
<CustomObject>
    <description>Business Description: This object is used by developers to track what code developments are checked in to the SVN server

Technical Description: This object holds code commit details, populated via a post-commit hook or webhook. Requires SVN server side configuration

Used In: Mission Control App</description>
    <fields>
        <fullName>Author__c</fullName>
        <description>User that performed the code commit</description>
        <inlineHelpText>User that performed the code commit</inlineHelpText>
        <label>Author</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <description>Commit message body</description>
        <inlineHelpText>Commit message body</inlineHelpText>
        <label>Body</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Files__c</fullName>
        <description>This field will hold the list of files that have been changed with a commit to the repository</description>
        <inlineHelpText>This list are files that have been changed with this commit</inlineHelpText>
        <label>Files</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <description>Commit message relationships (Defects, User Stories)</description>
        <inlineHelpText>Commit message relationships (Defects, User Stories)</inlineHelpText>
        <label>Related To</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <description>Field will hold the Revision number of the SCM Record</description>
        <inlineHelpText>This number is the Revision number from the Repository when these changes have been committed</inlineHelpText>
        <label>Revision</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <label>SCM Commit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Author__c</columns>
        <columns>Body__c</columns>
        <columns>Link__c</columns>
        <columns>Related_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Today_s_commits</fullName>
        <columns>NAME</columns>
        <columns>Author__c</columns>
        <columns>Body__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s commits</label>
    </listViews>
    <nameField>
        <displayFormat>SCM-{0000000}</displayFormat>
        <label>SCM Commit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SCM Commits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>